# P1.5

./: readme.rst
D1-exercise/: myfunc.py  mymodule.py  object_oriented.py  procedural.py  readme.md
D2-codes/basics_and_syntax/: const_arg.cpp  const_arg2.cpp  const_arg3.cpp  const_arg4.cpp  const_ref.cpp  function_overloading_1.cpp  function_overloading_2.cpp  hello.cpp  hello_again.cpp  memory_allocation.cpp  memory_allocation_wrong.cpp  mid-code_ini.cpp  namespace.cpp  ref_array.cpp  references.cpp  swap.cpp
D2-codes/oop_fundamentals/: const_mem.cpp  myvector.cpp  myvector_2.cpp  myvector_deep.cpp  myvector_shallow.cpp  private_public.cpp  rectangle.cpp  rectangle_2.cpp  rectangle_3.cpp  rectangle_4.cpp  rectangle_5.cpp  rectangle_6.cpp  rectangle_copy_vs_assignment.cpp
D2-exercise/: MyMatrix.cpp  MyMatrix.h  makefile  prog.cpp  readme.rst
D3-codes/dynamic_dispatch/: rectangle.h
D3-codes/initialization_list/: makefile  prog.cpp  rectangle.cpp  rectangle.h  square.cpp
D3-codes/late_binding/: prog.cpp
D3-codes/static_dispatch/: square.h
D3-codes/static_keyword/: makefile  myclass.cpp  myclass.h  prog.cpp
D3-codes/static_linkage/: prog.cpp  rectangle.cpp
D3-exercise/: MyMatrix.cpp  MyMatrix.h  MySquareMatrix.cpp  MySquareMatrix.h  makefile  prog.cpp  readme.rst
D3-exercise/CMakeFolder/: CMakeLists.txt  MyMatrix.cpp  MyMatrix.h  prog.cpp
D4-codes/: algorithm.cpp  array.cpp  complex.cpp  map.cpp  map_custom_compare.cpp  matrix.cpp  vector.cpp  vector_iterator.cpp
D4-exercise/: hint_on_missing_methods  readme.md
D4-exercise/toy_lib/: CMakeLists.txt  readme.md
D4-exercise/toy_lib/applications/: CMakeLists.txt  main.cpp
D4-exercise/toy_lib/tests/: CMakeLists.txt  runtest.cmake  test.h
D4-exercise/toy_lib/tests/base/: basic_test.cpp
D4-exercise/toy_lib/tests/base/basic_test/: expected.txt
D4-exercise/toy_lib/tests/grid/: hyper_ball_00.cpp  hyper_cube_00.cpp
D4-exercise/toy_lib/tests/grid/hyper_ball_00/: expected.txt
D4-exercise/toy_lib/tests/grid/hyper_cube_00/: expected.txt
D4-exercise/toy_lib/tests/lac/: matrix_00.cpp  matrix_01.cpp
D4-exercise/toy_lib/tests/lac/matrix_00/: expected.txt
D4-exercise/toy_lib/tests/lac/matrix_01/: expected.txt
D4-exercise/toy_lib/tests/mytest/: mytest_00.cpp
D4-exercise/toy_lib/tests/mytest/mytest_00/: expected.txt
D6-codes/AoS-SoA/: data_AoS  data_SoA  makefile  new_plot_gen.py  plots_gen.py  script_test  testAoS.cpp  testSoA.cpp
D6-codes/adapter/: MyBoostMatrix.h  makefile  matrix.h  prog.cpp
D6-codes/factory_method/: RectangleFactory.cpp  RectangleFactory.h  makefile  prog.cpp  rectangle.cpp  rectangle.h  square.cpp  square.h
D6-codes/strategy/: DumbGenerator.cpp  DumbGenerator.h  Generator.h  LCGenerator.cpp  LCGenerator.h  MonteCarlo.cpp  MonteCarlo.h  makefile  prog.cpp
D6-exercise/: FactoryMatrix.cpp  FactoryMatrix.h  MyMatrix.cpp  makefile  prog.cpp  readme.rst
D7-hands-on/cpp/: main.cpp
D8-assignment/: FactoryMatrix.cpp  FactoryMatrix.h  MyMatrix.cpp  MyMatrix.h  MySquareMatrix.h  MyVectors.h  comments.rst  lvector.cpp  lvector.h  makefile  prog.cpp  readme.rst  rvector.cpp  rvector.h
(+51 files in other folders)
